[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Admin Testing Room/TX Props.png" type="Texture" id=1]
[ext_resource path="res://Assets/Admin Testing Room/TX Shadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/RuinMap/relicArea.gd" type="Script" id=3]
[ext_resource path="res://Assets/Popup Emotes/pipo-popupemotes047.png" type="Texture" id=4]
[ext_resource path="res://Effects/Particles/floaty_64.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 353, 269, 97, 72 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 353, 269, 94, 72 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 330, 266, 5, 5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 337, 266, 5, 5 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 330, 273, 5, 5 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 337, 273, 5, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 10 )

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Curve" id=14]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 88.3436 ), 0.0, -164.145, 0, 0, Vector2( 0.492733, 53.9877 ), 0.0, 0.0, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0.0218023, 0.800613 ), 0.0, 0.0, 0, 0, Vector2( 0.521802, 0.791411 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.0322581, 0.548387 )
colors = PoolColorArray( 0, 0, 0, 1, 0.76129, 0.76129, 0.76129, 1, 1, 1, 1, 1 )

[sub_resource type="Curve" id=17]
min_value = -1.0
_data = [ Vector2( 0.0159884, -0.478528 ), 0.0, 0.0, 0, 0, Vector2( 0.382267, 0.674847 ), 0.0, 0.0, 0, 0, Vector2( 0.736919, 0.944785 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.601227 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=12]
radius = 15.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="RelicArea" type="Node2D"]
script = ExtResource( 3 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 3, 0 )
texture = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="Left_Lit" type="Sprite" parent="."]
visible = false
position = Vector2( -38, -3 )
texture = SubResource( 3 )

[node name="Upper_Lit" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -30 )
texture = SubResource( 4 )

[node name="Bottom_Lit" type="Sprite" parent="."]
visible = false
position = Vector2( 1, 24 )
texture = SubResource( 5 )

[node name="Right_Lit" type="Sprite" parent="."]
visible = false
position = Vector2( 40, -3 )
texture = SubResource( 6 )

[node name="Stage_Cleared" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage_Cleared"]
shape = SubResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Stage_Cleared"]
material = SubResource( 13 )
amount = 30
texture = ExtResource( 5 )
spread = 152.61
gravity = Vector2( 0, -98 )
initial_velocity = 30.0
initial_velocity_random = 1.0
linear_accel_curve = SubResource( 14 )
scale_amount_curve = SubResource( 15 )
color_initial_ramp = SubResource( 16 )
hue_variation_curve = SubResource( 17 )

[node name="Stage_Cleared_Button" type="TouchScreenButton" parent="Stage_Cleared"]
position = Vector2( 3, -50 )
shape = SubResource( 12 )
action = "finish"
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Stage_Cleared/Stage_Cleared_Button"]
position = Vector2( 16, 16 )
frames = SubResource( 11 )
playing = true

[connection signal="body_entered" from="Stage_Cleared" to="." method="_on_Stage_Cleared_body_entered"]
[connection signal="body_exited" from="Stage_Cleared" to="." method="_on_Stage_Cleared_body_exited"]
